# eplstudents.github.io

./: Cargo.toml  README.md  banquet-map.html  discord.html  gen_static.sh  index.html
.github/workflows/: deploy.yml
discord/: index.html
discord-sinf/: index.html
docs/: CNAME  index.html
docs/public/: main.css
drive/: index.html
drive-contributions/: index.html
public/: main.css
sharepoint-epl/: index.html
src/: main.rs
static/: index.html
static/drive/: index.html
static/public/: main.css
